--- a/dissertation.tex
+++ b/dissertation.tex
@@ -1666,7 +1666,7 @@ The difficulties faced in this project largely stem from the inherent issue that
 concurrent programming is simply hard to wrap ones mind around. The intractable
 number of thread interleavings and possible flows of execution make for a rather
 miserable programming experience, if one does not take proactive caution and
-combative measures. Even trickier phenomenons like atomic operations and memory
+combative measures. Even trickier phenomena like atomic operations and memory
 orderings only add to the pain.
 
 A stark consequence of the non-determinism of concurrent programming is that
